# refrigator

./: CMakeLists.txt  CalcCPP.cpp  CalcCPP.h  README.md  Token.h  Token_stream.cpp  Token_stream.h  funktions.cpp  funktions.h  output1  testing.txt
